<resources>
    <!-- Uygulama Adı -->
    <string name="app_name">İçimdekiler</string>

    <!-- Kullanıcı Arayüzü Metinleri -->
    <string name="kullaniciAdi">Kullanıcı Adı</string>
    <string name="isimSoyisim">İsim-Soyisim</string>
    <string name="ePosta">e-Posta</string>
    <string name="telNo">Telefon Numarası</string>
    <string name="parola">Parola</string>

    <!-- Buton Metinleri -->
    <string name="misafirKullanici">Misafir Kullanıcı</string>
    <string name="kayitOl">Kayıt Ol</string>
    <string name="girisYap">Giriş Yap</string>
    <string name="cikisYap">Çıkış Yap</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="bildiriler">Bildiriler</string>
    <string name="hesapAyarlari">Hesap Ayarları</string>
    <string name="kaydet">Kaydet</string>
    <string name="guncelle">Güncelle</string>
    <string name="sil">Sil</string>
    <string name="izinVer">İzin Ver</string>
    <string name="bildir">Bildir</string>
    <string name="evet">Evet</string>
    <string name="hayir">Hayır</string>
    <string name="iptal">İptal</string>
    <string name="tamam">Tamam</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="secimYap">Seçim Yap</string>
    <string name="menu">Menü</string>
    <string name="barkodOku">Barkod Oku</string>
    <string name="urunEkle">Ürün Ekle</string>
    <string name="urunAra">Ürün Ara</string>
    <string name="icerikEkle">İçerik Ekle</string>
    <string name="urunler">Ürünler</string>
    <string name="tumUrunler">Tüm Ürünler</string>
    <string name="icecekler">İçecekler</string>
    <string name="atistirmaliklar">Atıştırmalıklar</string>
    <string name="sutVeSutUrunleri">Süt ve Süt Ürünleri</string>
    <string name="temelGida">Temel Gıda</string>
    <string name="icerikYonetimi">İçerik Yönetimi</string>
    <string name="yeniIcerikEkle">Yeni İçerik Ekle</string>
    <string name="parolayiDegistir">Parolayı Değiştir</string>
    <string name="guncelParola">Güncel Parola</string>
    <string name="yeniParola">Yeni Parola</string>
    <string name="parolayiDogrula">Parolayı Doğrula</string>
    <string name="parolayiGuncelle">Parolayı Güncelle</string>
    <string name="temaDegistirme">Tema Değiştirme</string>
    <string name="dil">Dil</string>
    <string name="hesabiSil">Hesabı Sil</string>
    <string name="hesap">Hesap</string>
    <string name="varsayilan">Varsayılan</string>
    <string name="turkce">Türkçe(tr)</string>
    <string name="ingilizce">İngilizce(en)</string>
    <string name="aydinlik">Aydınlık</string>
    <string name="karanlik">Karanlık</string>
    <string name="flasAcKapat">Flaş Aç/Kapat</string>
    <string name="flasAc">Flaş Aç</string>
    <string name="flasKapat">Flaş Kapat</string>
    <string name="kapat">Kapat</string>
    <string name="ilerle">İlerle</string>

    <!-- Başlıklar -->
    <string name="urunAdi">Ürün Adı</string>
    <string name="icindekiler">İçindekiler</string>
    <string name="icerik">İçerik</string>
    <string name="kategori">Kategori</string>
    <string name="barkod">Barkod</string>
    <string name="aciklama">Açıklama</string>
    <string name="urunSayisi">Ürün Sayısı</string>
    <string name="urunDuzenle">Ürün Düzenle</string>
    <string name="temelBilgiler">Temel Bilgiler</string>
    <string name="icerikSecEkle">İçerik Seç veya Ekle</string>
    <string name="yeniUrun">Yeni Ürün</string>
    <string name="mevcutUrun">Mevcut Ürün</string>

    <!-- Besin Değerleri -->
    <string name="besinDegerleri">Besin Değerleri (100g)</string>
    <string name="kaloriKcal100g">Kalori (kcal)</string>
    <string name="protein100g">Protein (g)</string>
    <string name="karbonhidrat100g">Karbonhidrat (g)</string>
    <string name="yag100g">Yağ (g)</string>

    <!-- Günlük Takip Ekranı Metinleri -->
    <string name="gunlukTakip">Günlük Takip</string>
    <string name="tarihSec">Tarih Seç</string>
    <string name="gunlukTakipVeHedefler">Günlük Takip &amp; Hedefler</string>
    <string name="kaloriMakroVeIstatistikler">Kalori, Makro ve İstatistikler</string>
    <string name="geri">Geri</string>
    <string name="hedefDuzenle">Hedef Düzenle</string>
    <string name="kaloriHedefi">Kalori Hedefi</string>
    <string name="kalanKcal">Kalan: %s kcal</string>
    <string name="makroDagilimi">Makro Dağılımı</string>
    <string name="protein">Protein</string>
    <string name="karbonhidrat">Karbonhidrat</string>
    <string name="yag">Yağ</string>
    <string name="tuketilenOgunler">Tüketilen Öğünler</string>
    <string name="henuzUrunEklemediniz">Henüz bir ürün eklemediniz.</string>
    <string name="hedefleriGuncelle">Hedefleri Güncelle</string>
    <string name="gunlukKaloriKcal">Günlük Kalori (kcal)</string>
    <string name="proteinGr">Protein (g)</string>
    <string name="karbonhidratGr">Karbonhidrat (g)</string>
    <string name="yagGr">Yağ (g)</string>
    <string name="buEkranIcinGirisYapmalisiniz">Bu ekran için giriş yapmalısınız.</string>
    <string name="hedeflerKaydedildi">Hedefler kaydedildi.</string>
    <string name="hedeflerKaydedilemedi">Hedefler kaydedilemedi.</string>
    <string name="lutfenOnceGirisYapin">Lütfen önce giriş yapın.</string>
    <string name="kaydedilemedi">Kaydedilemedi.</string>
    <string name="grKcalGunlugunuzeEklendi">%1$s gr (%2$s kcal) günlüğünüze eklendi</string>

    <!-- Diğer Metinler -->
    <string name="halaKayitOlmadinMi">Hâlâ Kayıt Olmadın Mı?</string>
    <string name="zatenHesabinVarMi">Zaten Hesabın Var Mı?</string>
    <string name="beniHatirla">Beni Hatırla</string>

    <!-- Uyarı ve Hata Mesajları -->
    <string name="beklenmedikBirHataOlustu">Beklenmedik bir hata oluştu!</string>
    <string name="buKullaniciAdiZatenKullaniliyor">Bu kullanıcı adı zaten kullanılıyor!</string>
    <string name="lutfenBosAlanBirakmayiniz">Lütfen boş alan bırakmayınız!</string>
    <string name="parolaEnAzAltiKarakterOlmali">Parola en az 6 karakter olmalı!</string>
    <string name="hosgeldin">Hoşgeldin</string>
    <string name="kullaniciBilgileriYanlis">Kullanıcı bilgileri yanlış!</string>
    <string name="kullaniciBulunamadi">Kullanıcı bulunamadı!</string>
    <string name="girisBasarisizEpostaVeyaParolaHatali">Giriş başarısız! E-posta veya parola hatalı.</string>
    <string name="cikisYapmakIstediginizdenEminMisiniz">Çıkış yapmak istediğinizden emin misiniz?</string>
    <string name="urunBulunamadi">Ürün bulunamadı</string>
    <string name="barkodOkumakIcinGaleriyeErisimIzniGerekli">Barkod okumak için galeriye erişim izni gerekli!</string>
    <string name="barkodOkumakIcinKamerayaErisimIzniGerekli">Barkod okumak için kameraya erişim izni gerekli!</string>
    <string name="barkodOkunamadi">Barkod okunamadı!</string>
    <string name="gorselBulunamadi">Görsel bulunamadı!</string>
    <string name="galeriIzniVerilmedi">Galeri izni verilmedi!</string>
    <string name="kameraIzniVerilmedi">Kamera izni verilmedi!</string>
    <string name="belgeBulunamadi">Belge bulunamadı!</string>
    <string name="sonucBulunamadi">Sonuç bulunamadı!</string>
    <string name="bildirinizIletildiTesekkurler">Bildiriminiz iletildi, teşekkürler!</string>
    <string name="bildiriGonderilemedi">Bildiri gönderilemedi.</string>
    <string name="bildiriDahaOnceYapilmis">Bildiri daha önce yapılmış.</string>
    <string name="urunBasariylaSilindi">Ürün başarıyla silindi!</string>
    <string name="silmekIstediginizdenEminMisiniz">Silmek istediğinizden emin misiniz?</string>
    <string name="urunBasariylaGuncellendi">Ürün başarıyla güncellendi!</string>
    <string name="guncellemekIstediginizdenEminMisiniz">Güncellemek istediğinizden emin misiniz?</string>
    <string name="urunBasariylaKayitEdildi">Ürün başarıyla kayıt edildi!</string>
    <string name="kayitEtmekIstediginizdenEminMisiniz">Kayıt etmek istediğinizden emin misiniz?</string>
    <string name="urunDahaOnceKayitEdilmis">Bu ürün daha önce kayıt edilmiş!</string>
    <string name="gecersizBarkodNo">Geçersiz barkod numarası!</string>
    <string name="lutfenePostaniziDogrulayin">Lütfen e-postanızı doğrulayın!</string>
    <string name="dogrulamaTamamlandiAnaSayfayaYonlendiriliyorsunuz">Doğrulama tamamlandı! Ana sayfaya yönlendiriliyorsunuz.</string>
    <string name="parolabaşarıylagüncellendi">Parola başarıyla güncellendi!</string>
    <string name="yeniparolalareşleşmiyor">Yeni Parolalar Eşleşmiyor!</string>
    <string name="gelistirmeAsamasında">Geliştirme aşamasında!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>