<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.urunEkleFragment">

    <Spinner
        android:id="@+id/kategoriSpinner"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <EditText
        android:id="@+id/barkodNoText"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/barkod"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/urunAdiText"
        app:layout_constraintStart_toStartOf="@+id/urunAdiText" />

    <ImageView
        android:id="@+id/ekleImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="3dp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="@+id/icerikSpinner"
        app:layout_constraintStart_toEndOf="@+id/icerikSpinner"
        app:layout_constraintTop_toTopOf="@+id/icerikSpinner"
        app:layout_constraintVertical_bias="0.333" />

    <Spinner
        android:id="@+id/icerikSpinner"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/icindekilerListView"
        app:layout_constraintStart_toStartOf="@+id/kategoriSpinner" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/icerik"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icerikSpinner"
        app:layout_constraintStart_toStartOf="@+id/urunAdiText"
        app:layout_constraintTop_toTopOf="@+id/icerikSpinner" />

    <ImageView
        android:id="@+id/barkodOkuImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/barcode_reader"
        app:layout_constraintBottom_toBottomOf="@+id/barkodNoText"
        app:layout_constraintEnd_toEndOf="@+id/urunAdiText"
        app:layout_constraintTop_toTopOf="@+id/barkodNoText" />

    <EditText
        android:id="@+id/urunAdiText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/urunAdi"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/kaydetButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/kaydet"
        app:layout_constraintBottom_toBottomOf="@+id/silButton"
        app:layout_constraintStart_toEndOf="@+id/silButton" />

    <Button
        android:id="@+id/silButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/sil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/icindekilerListView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/kaydetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/gorselSecImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/barkodNoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/kategori"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>